<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.crm.siska.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_leads"
        android:name="com.crm.siska.ui.leads.LeadsFragment"
        android:label="@string/title_leads"
        tools:layout="@layout/fragment_leads" />

    <fragment
        android:id="@+id/nav_input"
        android:name="com.crm.siska.ui.input.InputFragment"
        android:label="@string/title_input"
        tools:layout="@layout/fragment_input" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.crm.siska.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.crm.siska.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >

<!--        <action android:id="@+id/action_change_pass"-->
<!--            app:destination="@id/fragmentChangePass"/>-->

    </fragment>

<!--    <fragment-->
<!--        android:id="@+id/fragmentChangePass"-->
<!--        android:name="com.crm.siska.ui.account.AccountFragment"-->
<!--        android:label="@string/title_account"-->
<!--        tools:layout="@layout/fragment_change_pass" >-->

<!--    </fragment>-->


</navigation>